--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -1,7 +1,7 @@
 <section class="section banner" id="banner">
     <div class="container-fluid p-0" data-aos="fade-up" data-aos-duration="1000">
         <div class="row no-gutters position-relative">
-            <div class="col-12 position-relative">
+            <div class="col-12 position-relative photos-container">
                 <!-- First photo -->
                 <img *ngIf="language=='ar'" src="assets/images/banner_ar.png" class="img-fluid w-100 container empty-space" alt="First Photo">
                 <img *ngIf="language=='en'" src="assets/images/banner_en.png" class="img-fluid w-100 container empty-space" alt="First Photo">
