--- a/src/app/components/home/contact-us/contact-us.component.html
+++ b/src/app/components/home/contact-us/contact-us.component.html
@@ -69,7 +69,7 @@
         <div class="col-lg-6">
           <div class="contact-info">
             <h4>{{ 'ContactUs.ContactInformation' | translate }}</h4>
-            <p><strong>{{ 'ContactUs.Address' | translate }}</strong> 6 El Imam Ali Helioplies</p>
+            <p><strong>{{ 'ContactUs.Address' | translate }}</strong> {{ 'ContactUs.Location' | translate }}</p>
             <p><strong>{{ 'ContactUs.Hotline' | translate }}</strong> 19973</p>
             <p><strong>{{ 'ContactUs.EmailAddress' | translate }}</strong> helpdesk&#64;pioneers-securities.com</p>
             <p><strong>{{ 'ContactUs.PhoneNumber' | translate }}</strong> 202-24190126</p>
