--- a/src/app/components/home/proyects/proyects.component.scss
+++ b/src/app/components/home/proyects/proyects.component.scss
@@ -11,9 +11,9 @@ h3 {
 }
 
 .space-row {
-    margin: 5%;
-    padding: 5%;
-    margin-bottom: -2%;
+    margin: 15px;
+    padding: 25px;
+    margin-bottom: -1%;
 }
 
 .value-heading {
