--- a/src/app/components/home/sectors/sectors.component.scss
+++ b/src/app/components/home/sectors/sectors.component.scss
@@ -6,7 +6,7 @@
 
     .jobs-inner {
         padding-top: 10%;
-        margin-top: 5%;
+        // margin-top: 5%;
         background-color: #fff;
     }
 }
