--- a/src/app/components/home/news/news.component.scss
+++ b/src/app/components/home/news/news.component.scss
@@ -158,3 +158,17 @@
     background-color: $LightNavy;
     color: white;
   }
+  .download-button {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: $LightNavy;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  
+    &:hover {
+      background-color: darken($LightNavy, 10%);
+    }
+  }
