stock details updates

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,7 @@
     <app-banner></app-banner>
     <!-- <app-jobs></app-jobs> -->
     <app-stock-market></app-stock-market>
+    <app-additional-tables></app-additional-tables>
     <app-market-summary></app-market-summary>
     <app-market-watch></app-market-watch>
     <app-about></app-about>
