--- a/src/app/components/stock-details/stock-details.component.scss
+++ b/src/app/components/stock-details/stock-details.component.scss
@@ -24,7 +24,8 @@
     width: 100%;
     border-collapse: collapse;
 
-    th, td {
+    th,
+    td {
       padding: 10px;
       text-align: center;
       border: 1px solid #ddd;
@@ -54,7 +55,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-top: 20px; 
+  margin-top: 20px;
 
   @media (max-width: 768px) {
     flex-direction: column;
@@ -62,69 +63,109 @@
 }
 
 .chart-container {
-  flex: 1; 
-  padding-right: 10px; 
+  flex: 1;
+  padding-right: 10px;
 
   canvas {
     width: 100%;
-    height: 400px; 
+    height: 400px;
   }
 }
 
 .details-section-container {
-  flex: 1; 
-  padding-left: 10px; 
+  flex: 1;
+  padding-left: 10px;
   height: 300px;
-  overflow: auto; 
+  overflow: auto;
 }
 
 .details-section {
-  height: 100%; 
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
-.details-section div{
- display: flex;
- flex-direction: row;
- gap: 10px;
+
+.details-section div {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
-.bigger-text{
-    font-weight: bold;
-    color: #000;
-   }
+
+.bigger-text {
+  font-weight: bold;
+  color: #000;
+}
+
 [dir="rtl"] {
   h3 {
     text-align: right;
   }
-  
+
 }
 
 
 @media (max-width: 768px) {
-    .empty-space{
-        height: 200px;
-        background-color: $Navy;
-    }
-    
-    
+  .empty-space {
+    height: 200px;
+    background-color: $Navy;
   }
-  @media (max-width: 827px) {
-    .empty-space{
-        height: 200px;
-        background-color: $Navy;
-    }
-    
-  }
-  @media (max-width: 1000px) {
-    .empty-space{
-        height: 200px;
-        background-color: $Navy;
-    }
-  }
-  @media (max-width: 576px) {
-    .empty-space{
-        height: 200px;
-        background-color: $Navy;
-    }
+
+
 }
-  
+
+@media (max-width: 827px) {
+  .empty-space {
+    height: 200px;
+    background-color: $Navy;
+  }
+
+}
+
+@media (max-width: 1000px) {
+  .empty-space {
+    height: 200px;
+    background-color: $Navy;
+  }
+}
+
+@media (max-width: 576px) {
+  .empty-space {
+    height: 200px;
+    background-color: $Navy;
+  }
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  margin: 10px auto;
+  width: 50px;
+  aspect-ratio: 1;
+  display: grid;
+  border-radius: 50%;
+  background:
+    linear-gradient(0deg, rgb(0 0 0/50%) 30%, #0000 0 70%, rgb(0 0 0/100%) 0) 50%/8% 100%,
+    linear-gradient(90deg, rgb(0 0 0/25%) 30%, #0000 0 70%, rgb(0 0 0/75%) 0) 50%/100% 8%;
+  background-repeat: no-repeat;
+  animation: l23 1s infinite steps(12);
+}
+
+.loader::before,
+.loader::after {
+  content: "";
+  grid-area: 1/1;
+  border-radius: 50%;
+  background: inherit;
+  opacity: 0.915;
+  transform: rotate(30deg);
+}
+
+.loader::after {
+  opacity: 0.83;
+  transform: rotate(60deg);
+}
+
+@keyframes l23 {
+  100% {
+    transform: rotate(1turn)
+  }
+}
