--- a/src/app/components/home/additional-tables/additional-tables.component.scss
+++ b/src/app/components/home/additional-tables/additional-tables.component.scss
@@ -90,7 +90,7 @@
 
 .jobs {
   background-color: $Navy;
-  
+  padding-top: 8%;
   .jobs-inner {
     background-color: #fff;
     margin-bottom: -5%;
