--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -56,6 +56,10 @@
                     <a ngbNavLink (click)='scroll("trading-rules")'><span class='nav-number'></span> <span class="underline nav-text"> {{"Header.Item4" | translate}}</span></a>
                     <ng-template ngbNavContent>Second content</ng-template>
                 </li>
+                <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
+                    <a ngbNavLink (click)='scroll("agenda")'><span class='nav-number'></span> <span class="underline nav-text"> {{"Header.Item7" | translate}}</span></a>
+                    <ng-template ngbNavContent>Second content</ng-template>
+                </li>
                 <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_jobs", "menu", "click")'>
                     <a ngbNavLink (click)='scroll("market-statistics")'><span class='nav-number'></span> <span class="underline nav-text"> {{"Header.Item5" | translate}}</span></a>
                     <ng-template ngbNavContent>Second content</ng-template>
@@ -125,6 +129,11 @@
                         <li (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
                             <a (click)='scroll("trading-rules")'>
                                 <span></span> {{"Header.Item4" | translate}}
+                            </a>
+                        </li>
+                        <li (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
+                            <a (click)='scroll("agenda")'>
+                                <span></span> {{"Header.Item7" | translate}}
                             </a>
                         </li>
                         <li  (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
